sometimes result in an ISE. [Michael Peters]

=item *

Fixed a bug where closing C<< </p> >> tags were being stripped during
Bulk Edit even when the separator wasn't C<< <p> >>. [Michael Peters]

=item *

Advanced search on Media filename no longer treats underscores as SQL
wildcard characters since they are really common in file names. [Michael
Peters]

=back

=head2 3.20 - June 7th, 2012

=over

=item *

Adding full text search for text-based media objects (Javascript, HTML,
Stylesheets, Plain Text, etc). [Michael Peters]

=item *

Unload/Unlock the session in a post-run hook instead of waiting until the
full request is done (and the session object goes out of scope) so we don't
have to wait on clients to finish getting the request before we can start
handling another one. [Michael Peters]

=item *

Fixed bug where query string wasn't preserved when you had to login and it
tried to preserve the target destination after the login. [Michael Peters]

=item *

Fixed bug where some publish time exceptions were being silently
disguarded and the user would be left with a successful message even
though the item was never published. [Michael Peters]

=back

=head2 3.19 - April 13, 2012

=over

=item *

Don't convert hyphens in media filenames into underscores since hyphens
are valid in URLs and filenames. [Michael Peters]

=item *

Added C<no_anchor> option to L<Krang::Widget::autocomplete_values>.
[Michael Peters]

=item *

Fixing bug in template editor when code editor (CodePress) is on
that prevented edits after an initial "Save & Stay" from actually
saving. [Michael Peters]

=item *

After a successful login, if we were trying to get someplace else
originally redirect there instead of always taking the user to the
workspace. [Michael Peters]

=item *

L<Krang::FTP::Server> now logs properly in F<logs/krang.log>.
[Daniel S. Sterling]

=item *

L<Krang::FTP::Server> only call binmode utf8 for templates, not for media.
[Daniel S. Sterling]

=item *
